--- a/Landing-Page-main/style.css
+++ b/Landing-Page-main/style.css
@@ -77,6 +77,15 @@ button {
 
 .quoteSection {
     background-color: #E5E7EB;
+    height: 300px;
+    padding: 5% 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.quoteSection span {
+    justify-content: flex-end;
+    display: flex;
 }
 
 .quoteText {
@@ -117,6 +126,7 @@ button {
 #mainBodySection {
     display: flex;
     flex-direction: column;
+    padding: 5%;
 }
 
 #mainSubsection1,
