Finsihed Footer. Project is done

--- a/Landing-Page-main/style.css
+++ b/Landing-Page-main/style.css
@@ -44,6 +44,14 @@ button {
     border: none;
     border-radius: 4px;
 }
+
+footer {
+    margin: 0;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    line-height: 60px;
+}
 /*classes */
 .headerLogoText{
     font-size: 24px;
